<resources>
    <string name="app_name">PizzaRush</string>
    <string name="channel_name">My Channel</string>
    <string name="channel_description">My Description</string>
    <string name="msg_welcome">Welcome to Pizza Rush</string>
    <string name="msg_popularDeals">Our Most Popular Deals</string>
    <string name="btn_name_view_deals">View All Deals</string>
    <string name="btn_Sign_name">Sign in / Register</string>
    <string name="lbl_username">Username *</string>
    <string name="lbl_pass">Password *</string>
    <string name="txt_uname">Enter email</string>
    <string name="txt_pass">Enter password</string>
    <string name="btn_log">Log in with Pizza Rush</string>
    <string name="msg_create_account">Didn\'t have and account *</string>
    <string name="btn_create_account">Create an Account</string>
    <string name="btn_guest">Continue as a Guest</string>
    <string name="lbl_fname">First name *</string>
    <string name="lbl_lname">Last name *</string>
    <string name="lbl_phone">Phone no *</string>
    <string name="lbl_email">Email *</string>
    <string name="lbl_cpass">Confirm Password *</string>
    <string name="btn_register">Register</string>
    <string name="msg_become_memeber">BECOME A MEMBER</string>
    <string name="txt_fname">Enter First Name</string>
    <string name="txt_lname">Enter Last Name</string>
    <string name="txt_email">Enter Your Email</string>
    <string name="txt_phone">Enter Your Mobile No</string>
    <string name="msg_profile">Profile</string>
    <string name="btn_save">Save Changes</string>
    <string name="lbl_member_lvl">Member Level</string>
    <string name="lbl_points">Points</string>
    <string name="lbl_member_lv_value">Gold</string>
    <string name="lbl_points_value">150</string>
    <string name="txt_pfname">John</string>
    <string name="txt_plname">Doe</string>
    <string name="txt_pphone">0701111111</string>
    <string name="txt_pmail">John@mail.com</string>
    <string name="view_home">HOME</string>
    <string name="view_menu">MENU</string>
    <string name="view_deals">DEALS</string>
    <string name="view_contact">CONTACT US</string>
    <string name="view_logout">LOG OUT</string>
    <string name="view_terms">TERMS AND CONDITIONS</string>
    <string name="txt_member">Member Center</string>
    <string name="btn_add">ADD</string>
    <string name="btn_view">VIEW</string>
    <string name="title_itemmanagement">Item Management</string>
    <string name="title_additem">Add Item</string>
    <string name="lbl_itemID">Item ID*</string>
    <string name="lbl_itemName">Item Name*</string>
    <string name="lbl_itemIngredients">Item Ingredients*</string>
    <string name="lbl_itemDescription">Item Description*</string>
    <string name="lbl_itemType">Item Type*</string>
    <string name="lbl_itemPrice">Item Price*</string>
    <string name="txt_itemid">Enter Item ID</string>
    <string name="txt_itemName">Enter Item Name</string>
    <string name="txt_itemDescription">Enter Item Description</string>
    <string name="txt_itemIngredients">Enter Item Ingredients</string>
    <string name="txt_itemPrice">Enter Item Price</string>
    <string name="btn_cancell">Cancel</string>
    <string name="title_update_item">Update Item</string>
    <string name="btn_update">UPDATE</string>
    <string name="title_view_item">View Item</string>
    <string name="txt_searchid">Enter Item ID</string>

    <string name="txt_deliveryR">Delivery Management</string>
    <string name="btn_assignR">Assign Order to Rider</string>
    <string name="btn_ManageR">Manage Rider</string>
    <string name="btn_AddR">Add new Rider</string>
    <string name="txt_AssignR">Assign Order to Rider</string>
    <string name="txt_orderIDR">Order ID</string>
    <string name="txt_riderIDR">Rider ID</string>
    <string name="btn_addR">ADD</string>
    <string name="btn_deleteOR">DELETE</string>
    <string name="btn_updateR">UPDATE</string>
    <string name="txt_searchR">Search Rider ID</string>
    <string name="btn_searchR">SEARCH</string>
    <string name="txt_nameR">Name</string>
    <string name="txt_phoneR">Phone</string>
    <string name="txt_emailR">Email</string>
    <string name="txt_deliveredOR">Delivered Orders</string>
    <string name="txt_DeliveredOR">No. Of Delivered Orders</string>
    <string name="btn_deleteR">DELETE</string>
    <string name="txt_registrationR">Rider Registration</string>
    <string name="txt_bikeR">Bike No</string>
    <string name="btn_registerR">REGISTER</string>
</resources>
